Now loading Angular successfully.

--- a/web-tutorial/index.html
+++ b/web-tutorial/index.html
@@ -6,14 +6,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web-Tutorial</title>
-    <script src="app.js"></script>
+    <script src="/dist/boot.js"></script>
 </head>
 <body>
     <!--<h1>Web-Tutorial</h1>-->
     
-    <app>Angular loading...</app>
+    <tutorial-app>Angular loading...</tutorial-app>
 
 
-
+    <!-- DEV MODE... -->
+    <script src="/webpack-dev-server.js"></script>
 </body>
 </html>
