--- a/web-tutorial/index.html
+++ b/web-tutorial/index.html
@@ -9,10 +9,7 @@
     <script src="/dist/boot.js"></script>
 </head>
 <body>
-    <!--<h1>Web-Tutorial</h1>-->
-    
-    <tutorial-app>Angular loading...</tutorial-app>
-
+    <div id="tutorial-app"></div>
 
     <!-- DEV MODE... -->
     <script src="/webpack-dev-server.js"></script>
