--- a/web-tutorial/index.html
+++ b/web-tutorial/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web-Tutorial</title>
+    <link rel="stylesheet" href="https://unpkg.com/devextreme@16.2.6/dist/css/dx.common.css" />
+    <link rel="stylesheet" href="https://unpkg.com/devextreme@16.2.6/dist/css/dx.light.css" />
     <script src="/dist/boot.js"></script>
 </head>
 <body>
