--- a/web-tutorial/index.html
+++ b/web-tutorial/index.html
@@ -8,7 +8,7 @@
     <title>Web-Tutorial</title>
     <link rel="stylesheet" href="https://unpkg.com/devextreme@16.2.6/dist/css/dx.common.css" />
     <link rel="stylesheet" href="https://unpkg.com/devextreme@16.2.6/dist/css/dx.light.css" />
-    <script src="/dist/boot.js"></script>
+    <script src="/dist/main.js"></script>
 </head>
 <body>
     <div id="tutorial-app"></div>
